--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "art-template": "^4.0.0-beta8",
     "bootstrap": "^3.3.7",
+    "echarts": "^3.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jquery.cookie": "^1.4.1",
